@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="TortoiseProc"
 	ProjectGUID="{50797F06-39C5-4802-8E2B-7B7A4EF03214}"
 	RootNamespace="TortoiseProc"
@@ -392,14 +392,6 @@
 			Name="Utils"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;h;hpp;hxx;hm;inl;inc"
 			>
-			<File
-				RelativePath=".\EditPropConflictDlg.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\EditPropConflictDlg.h"
-				>
-			</File>
 			<File
 				RelativePath="..\Utils\ProfilingInfo.cpp"
 				>
@@ -1570,11 +1562,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\copy.ico"
+				RelativePath="..\Resources\copy.ico"
 				>
 			</File>
 			<File
-				RelativePath="..\Resources\copy.ico"
+				RelativePath=".\copy.ico"
 				>
 			</File>
 			<File
@@ -1602,11 +1594,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\explorer.ico"
+				RelativePath="..\Resources\explorer.ico"
 				>
 			</File>
 			<File
-				RelativePath="..\Resources\explorer.ico"
+				RelativePath=".\explorer.ico"
 				>
 			</File>
 			<File
@@ -1814,19 +1806,19 @@
 				>
 			</File>
 			<File
-				RelativePath="..\Resources\newfolder.ico"
-				>
-			</File>
-			<File
 				RelativePath=".\newfolder.ico"
 				>
 			</File>
 			<File
-				RelativePath="..\Resources\open.ico"
+				RelativePath="..\Resources\newfolder.ico"
 				>
 			</File>
 			<File
 				RelativePath=".\open.ico"
+				>
+			</File>
+			<File
+				RelativePath="..\Resources\open.ico"
 				>
 			</File>
 			<File
@@ -1846,11 +1838,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\refresh.ico"
+				RelativePath="..\Resources\refresh.ico"
 				>
 			</File>
 			<File
-				RelativePath="..\Resources\refresh.ico"
+				RelativePath=".\refresh.ico"
 				>
 			</File>
 			<File
@@ -1926,11 +1918,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\save.ico"
+				RelativePath="..\Resources\save.ico"
 				>
 			</File>
 			<File
-				RelativePath="..\Resources\save.ico"
+				RelativePath=".\save.ico"
 				>
 			</File>
 			<File
@@ -2018,11 +2010,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\Resources\up.ico"
+				RelativePath=".\up.ico"
 				>
 			</File>
 			<File
-				RelativePath=".\up.ico"
+				RelativePath="..\Resources\up.ico"
 				>
 			</File>
 			<File
@@ -3422,6 +3414,22 @@
 				</File>
 				<File
 					RelativePath=".\Commands\ConflictEditorCommand.h"
+					>
+				</File>
+				<File
+					RelativePath=".\EditPropConflictDlg.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\EditPropConflictDlg.h"
+					>
+				</File>
+				<File
+					RelativePath=".\TreeConflictEditorDlg.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\TreeConflictEditorDlg.h"
 					>
 				</File>
 			</Filter>
