@@ -42,6 +42,7 @@
 - NEW: Helper dialog to resolve property conflicts. (Stefan)
 - NEW: Revision graph can be collapsed / expanded as well as 
        cut and glued. (Stefan Fuhrmann)
+- NEW: Helper dialog to resolve tree conflicts. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
